# Mini-Project

./: CMakeLists.txt  README.md  course.cpp  course.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  queue.cpp  queue.h  student.cpp  student.h  teacher.cpp  teacher.h
